--- a/bankanp/.env
+++ b/bankanp/.env
@@ -3,4 +3,4 @@ DB_PASSWORD=LwpImtc1inAh$16
 DB_SERVER=192.99.150.165
 DB_DATABASE=elboz79_rishackmoto_hiswana
 DB_PORT=1433
-API_BASE_URL=https://ayam-api.up.railway.app
+API_BASE_URL=https://bankanp.up.railway.app
