--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: website
+name: miss
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -47,7 +47,9 @@ dependencies:
   web: ^1.1.1
   intl: ^0.19.0
   http: ^1.2.2
+  flutter_dotenv: ^5.0.2
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
