--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,16 +43,20 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^24.1.41
   webview_flutter: ^4.2.2
   universal_html: ^2.2.4
-  js: ^0.6.7
+  # js: ^0.6.7
   web: ^1.1.1
   intl: ^0.19.0
   http: ^1.2.2
   flutter_dotenv: ^5.0.2
   go_router: ^14.0.1   
-  
+  url_strategy: ^0.2.0
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  js: ^0.7.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
