--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   go_router: ^14.0.1   
   url_strategy: ^0.2.0
+  currency_text_input_formatter: ^2.0.0
     
 dev_dependencies:
   flutter_test:
