--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,13 @@ dependencies:
   go_router: ^14.0.1   
   url_strategy: ^0.2.0
   currency_text_input_formatter: ^2.0.0
-    
+  custom_clippers: ^2.0.4
+  flutter_fortune_wheel: ^1.2.0
+  audioplayers: ^6.5.1
+  vibration: ^3.1.3
+  shared_preferences: ^2.5.3
+  qr_flutter: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,6 +87,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lottie/
+    - assets/music/
     - assets/json/jaminan.json
     - assets/json/informasi.json
     # - images/a_dot_ham.jpeg
